results/smartbugs/Elysium/denial_of_service/send_loop/send_loop.out
 ______     __         __  __     ______     __     __  __     __    __    
/\  ___\   /\ \       /\ \_\ \   /\  ___\   /\ \   /\ \/\ \   /\ "-./  \   
\ \  __\   \ \ \____  \ \____ \  \ \___  \  \ \ \  \ \ \_\ \  \ \ \-./\ \  
 \ \_____\  \ \_____\  \/\_____\  \/\_____\  \ \_\  \ \_____\  \ \_\ \ \_\ 
  \/_____/   \/_____/   \/_____/   \/_____/   \/_/   \/_____/   \/_/  \/_/ 
                                                                           
Compiling source code...
Error: Solidity compilation failed!
smartbugs/dataset/denial_of_service/send_loop.sol:8:1: SyntaxError: Source file requires different compiler version (current compiler is 0.4.26+commit.4563c3fc.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity 0.4.24;
^---------------------^

smartbugs/dataset/denial_of_service/send_loop.sol:17:30: Warning: This looks like an address but has an invalid checksum. If this is not used as an address, please prepend '00'. Correct checksummed address: '0x79B483371E87d664cd39491b5f06250165e4b185'. For more information please see https://solidity.readthedocs.io/en/develop/types.html#address-literals
        refundAddresses.push(0x79B483371E87d664cd39491b5F06250165e4b185);
                             ^----------------------------------------^

Error: The compilation did not produce any output!
Please check the source code!
